# pyaiken

./: .gitignore  .travis.yml  Cargo.toml  LICENSE.txt  README.md  pyproject.toml
.ci/: deploy_to_pypi.sh
.github/: dependabot.yml
.github/workflows/: CI.yml  publish.yml  python.yml  release.yml
src/: lib.rs
