[package]
name = "pyaiken"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyaiken"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
miette = { version = "5.3.0", features = ["fancy"] }
uplc = { version = "0.0.28" }
hex = { version = "0.4.3" }
