[package]
name = "pyaiken"
version = "0.5.3"
edition = "2021"
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyaiken"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
miette = { version = "5.3.0", features = ["fancy"] }
uplc = { git = "https://github.com/aiken-lang/aiken.git", rev = "0cfcd7803909b351d4133862f3b178426530efc2" }
hex = { version = "0.4.3" }
