[package]
name = "pyaiken"
version = "0.5.5"
edition = "2021"
rust-version = "1.66.1"

[lib]
name = "pyaiken"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
miette = { version = "5.3.0", features = ["fancy"] }
uplc = { git = "https://github.com/nielstron/aiken.git", rev = "ad824de" }
hex = { version = "0.4.3" }
