[build-system]
requires = ["maturin>=1.4.0,<1.5.0"]
build-backend = "maturin"

[project]
name = "pyaiken"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "Python bindings for aiken"
keywords=["python", "rust", "cardano", "smart contract", "blockchain"]
license = {file = "LICENSE.txt"}
long-description = {file = "README.md"}
authors = [
  {email = "n.muendler@posteo.de"},
  {name = "Niels Mündler"}
]
maintainers = [
  {name = "Niels Mündler", email = "n.muendler@posteo.de"}
]
url = "https://github.com/opshin/pyaiken"


